scrollbar in loading fix

--- a/src/app/music-album/music-album.component.scss
+++ b/src/app/music-album/music-album.component.scss
@@ -15,8 +15,8 @@
 
 .loading{
   position: absolute;
-  height: 100%;
-  width: 100%;
+  height: 100px;
+  width: 100px;
   top: 50%;
   left: 50%;
   margin-left: -50px;
